syntax = "proto3";

package inventory;

option go_package = "github.com/Neroframe/ecommerce-platform/inventory-service/proto;inventorypb";

import "google/protobuf/empty.proto";

message CreateProductRequest {
  string name = 1;
  double price = 2;
  string category = 3;
  int32 stock = 4;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  double price = 3;
  string category = 4;
  int32 stock = 5;
}

message GetProductRequest {
  string id = 1;
}

message DeleteProductRequest {
  string id = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  string category = 4;
  int32 stock = 5;
}

message ListProductsRequest {} // add filters ?

message ListProductsResponse {
  repeated ProductResponse products = 1;
}

message CreateCategoryRequest {
  string name = 1;
}

message UpdateCategoryRequest {
  string id = 1;
  string name = 2;
}

message GetCategoryRequest {
  string id = 1;
}

message DeleteCategoryRequest {
  string id = 1;
}

message CategoryResponse {
  string id = 1;
  string name = 2;
}

message ListCategoriesRequest {}

message ListCategoriesResponse {
  repeated CategoryResponse categories = 1;
}


service InventoryService {
  // Products
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProductByID(GetProductRequest) returns (ProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (google.protobuf.Empty);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);

  // Categories
  rpc CreateCategory(CreateCategoryRequest) returns (CategoryResponse);
  rpc GetCategoryByID(GetCategoryRequest) returns (CategoryResponse);
  rpc UpdateCategory(UpdateCategoryRequest) returns (CategoryResponse);
  rpc DeleteCategory(DeleteCategoryRequest) returns (google.protobuf.Empty);
  rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse);
}
